[package]
name = "braiin_clock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.21.2", features = ["full"] }
serde = { version = "1.0.147", features = ["derive", "std"] }
serde_json = "1.0.87"
futures = "0.3"
openssl = "0.10.44"
dotenv = "0.15.0"
hyper = "0.14.23"

#[target.x86_64.unknown-linux-gnu]
#rustflags = ["-C", "linker=clang", "-C", "link-arg=-fuse-ld=lld"]
