[package]
name = "braiin_clock"
version = "0.1.5"
author = "Bayernator"
license = "MIT"
description = "A CLI tool that allows you to broadcast current Braiins Pool bitcoin mining info from your user profile directly to your BlockClock Mini"
readme = "README.md"
homepage = "https://github.com/Bayernatoor/braiins_clock"
repository = "https://github.com/Bayernatoor/braiins_clock"
keywords = ["cli", "bitcoin", "slushpool", "Braiins"]
categories = ["command-line-utilities"]
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.21.2", features = ["full"] }
serde = { version = "1.0.147", features = ["derive", "std"] }
serde_json = "1.0.87"
futures = "0.3"
dotenv = "0.15.0"
hyper = "0.14.23"

#[target.x86_64.unknown-linux-gnu]
#rustflags = ["-C", "linker=clang", "-C", "link-arg=-fuse-ld=lld"]
